# toytcp_by_rust

my-toytcp/echoserver/: Cargo.toml
my-toytcp/echoserver/src/: main.rs
my-toytcp/toytcp/: Cargo.toml
my-toytcp/toytcp/examples/: echoclient.rs
my-toytcp/toytcp/src/: lib.rs  packet.rs  socket.rs  tcp.rs  tcpflags.rs
