[package]
name = "toytcp"
version = "0.1.0"
authors = ["santamn <keysnow.trash@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27"  # Rustで低レイヤなネットワークプログラミングを行うためのクレート
anyhow = "1.0" # Rustでのエラー処理を簡単に行うためのクレート
rand = "0.8"   # 乱数を扱うクレート

[dev-dependencies]
ctrlc = "3.1"  # Ctrl+Cによるシグナルを簡単にハンドリングするためのクレート